tests/missing_annotation/missing_annotation.exp
Error: infer.js:4
  4:   a: function(arg) {  // missing arg annotation
                   ^^^ arg. Missing annotation

Error: infer.js:8
  8:   b: function(arg) {  // missing arg annotation
                   ^^^ arg. Missing annotation

Error: infer.js:32
 32:     return function(x) {  // missing param annotation
                         ^ x. Missing annotation


Found 3 errors
